--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Hola món</h1>
+    <h2><a href="https://pvergerc-esliceu.github.io/practica1/simple.html">Simple</a></h2>
+    <h2><a href="https://pvergerc-esliceu.github.io/practica1/horari.html">Horari</a></h2>
 </body>
 </html>
