--- a/horari-real.html
+++ b/horari-real.html
@@ -27,7 +27,7 @@
     <td>10:20-11:15</td>
     <td rowspan="1" class="Aplicacions">Aplicacions Web</td>
     <td rowspan="2" class="Sistemes">Sistemes operatius en xarxa</td>
-    <td rowspan="2" class="Aplicacions">Aplicacions</td>
+    <td rowspan="2" class="Aplicacions">Sistemes operatius en xarxa</td>
     <td rowspan="2" class="Aplicacions">Aplicacions Web</td>
     <td class="Sistemes">Sistemes operatius en xarxa</td>
   </tr>
