--- a/horari-real.html
+++ b/horari-real.html
@@ -33,7 +33,7 @@
   </tr>
   <tr>
     <td>11:15-12:10</td>
-    <td class="Sistemes">Serveis en xarxa</td>
+    <td class="serveis">Serveis en xarxa</td>
 
     <td class="serveis">Serveis en xarxa</td>
   </tr>
