--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Hola món</h1>
     <h2><a href="https://pvergerc-esliceu.github.io/practica1/simple.html">Simple</a></h2>
     <h2><a href="https://pvergerc-esliceu.github.io/practica1/horari.html">Horari</a></h2>
+    <h2><a href="https://pvergerc-esliceu.github.io/practica1/horari-real.html">Horari real</a></h2>
 </body>
 </html>
