--- a/horari.html
+++ b/horari.html
@@ -56,3 +56,12 @@
     <td>Web</td>
   </tr>
 </table>
+
+<br><br>
+<nav>
+    <ul>
+        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1">Inici</a></li>
+        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/simple.html">Simple</a></li><br>
+        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/registre.html">Registre</a></li><br>
+    </ul>
+</nav>
