--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>pvergerc-esliceu</title>
 </head>
 <body>
     <h1>Hola món</h1>
-    <h2><a href="https://pvergerc-esliceu.github.io/practica1/simple.html">Simple</a></h2>
-    <h2><a href="https://pvergerc-esliceu.github.io/practica1/horari.html">Horari</a></h2>
-    <h2><a href="https://pvergerc-esliceu.github.io/practica1/horari-real.html">Horari real</a></h2>
+    
 </body>
+<nav>
+    <ul>
+        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/simple.html">Simple</a></li><br>
+        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/horari.html">Horari</a></li><br>
+        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/registre.html">Registre</a></li>
+    </ul>
+</nav>
 </html>
