--- a/registre.html
+++ b/registre.html
@@ -31,3 +31,12 @@
     </div>
     <input type="submit" name="submit" id="submit" value="submit" required>
 </form>
+
+<br><br>
+<nav>
+    <ul>
+        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1">Inici</a></li>
+        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/simple.html">Simple</a></li><br>
+        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/horari.html">Horari</a></li><br>
+    </ul>
+</nav>
