--- a/simple.html
+++ b/simple.html
@@ -17,4 +17,13 @@
     </ul>
     <p>Make sure to follow me on <a href="https://google.com">Instagram</a></p>
 </body>
+
+<br><br>
+<nav>
+    <ul>
+        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1">Inici</a></li>
+        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/horari.html">Horari</a></li><br>
+        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/registre.html">Registre</a></li><br>
+    </ul>
+</nav>
 </html>
