--- a/horari.html
+++ b/horari.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="horari.css">
+<link rel="stylesheet" href="nav.css">
 <table>
   <tr>
     <td rowspan="2">HORARI</td>
@@ -60,8 +61,8 @@
 <br><br>
 <nav>
     <ul>
-        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1">Inici</a></li>
-        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/simple.html">Simple</a></li><br>
-        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/registre.html">Registre</a></li><br>
+        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1">Inici</a></li><br>
+        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/simple.html">Simple</a></li><br>
+        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/registre.html">Registre</a></li><br>
     </ul>
 </nav>
