--- a/registre.html
+++ b/registre.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="nav.css">
 <h1>Exercici, formulari de registre</h1>
 
 <form action="https://pvergerc-esliceu.github.io/practica1/registre.html" method="get">
@@ -35,8 +36,8 @@
 <br><br>
 <nav>
     <ul>
-        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1">Inici</a></li>
-        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/simple.html">Simple</a></li><br>
-        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/horari.html">Horari</a></li><br>
+        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1">Inici</a></li><br>
+        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/simple.html">Simple</a></li><br>
+        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/horari.html">Horari</a></li><br>
     </ul>
 </nav>
