--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="nav.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,9 +12,9 @@
 </body>
 <nav>
     <ul>
-        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/simple.html">Simple</a></li><br>
-        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/horari.html">Horari</a></li><br>
-        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/registre.html">Registre</a></li>
+        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/simple.html">Simple</a></li><br>
+        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/horari.html">Horari</a></li><br>
+        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/registre.html">Registre</a></li>
     </ul>
 </nav>
 </html>
