--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="nav.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,9 +22,9 @@
 <br><br>
 <nav>
     <ul>
-        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1">Inici</a></li>
-        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/horari.html">Horari</a></li><br>
-        <li style="font-size: 25px;"><a href="https://pvergerc-esliceu.github.io/practica1/registre.html">Registre</a></li><br>
+        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1">Inici</a></li><br>
+        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/horari.html">Horari</a></li><br>
+        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/registre.html">Registre</a></li><br>
     </ul>
 </nav>
 </html>
