--- a/horari.html
+++ b/horari.html
@@ -14,11 +14,11 @@
   </tr>
   <tr>
     <td>8:00-8:50</td>
-    <td rowspan="2">Serveis</td>
-    <td rowspan="2">Seguretat</td>
-    <td rowspan="2">serveis</td>
-    <td rowspan="2">sistemes</td>
-    <td rowspan="2">serveis</td>
+    <td rowspan="2" class="serveis">Serveis</td>
+    <td rowspan="2" class="seguretat">Seguretat</td>
+    <td rowspan="2" class="serveis">serveis</td>
+    <td rowspan="2" class="sistemes">sistemes</td>
+    <td rowspan="2" class="serveis">serveis</td>
   </tr>
   <tr>
     <td>8:50-9:40</td>
@@ -29,16 +29,16 @@
   </tr>
   <tr>
     <td>10:00-10:55</td>
-    <td rowspan="2">seguretat</td>
-    <td rowspan="2">Aplicacions</td>
-    <td rowspan="2">Aplicacions</td>
-    <td>sistemes</td>
-    <td>serveis</td>
+    <td rowspan="2" class="seguretat">seguretat</td>
+    <td rowspan="2" class="aplicacions">Aplicacions</td>
+    <td rowspan="2" class="aplicacions">Aplicacions</td>
+    <td class="sistemes">sistemes</td>
+    <td class="serveis">serveis</td>
   </tr>
   <tr>
     <td>10:55-11:50</td>
-    <td>serveis</td>
-    <td>sistemes</td>
+    <td class="serveis">serveis</td>
+    <td class="sistemes">sistemes</td>
   </tr>
   <tr>
     <td>11:50-12:10</td>
@@ -46,15 +46,15 @@
   </tr>
   <tr>
     <td>12:10-13:05</td>
-    <td>EIE</td>
-    <td rowspan="2">EIE</td>
-    <td rowspan="2">Sistemes</td>
-    <td rowspan="2">Seguretat</td>
-    <td rowspan="2">Sistemes</td>
+    <td class="eie">EIE</td>
+    <td rowspan="2" class="eie">EIE</td>
+    <td rowspan="2" class="sistemes">Sistemes</td>
+    <td rowspan="2" class="seguretat">Seguretat</td>
+    <td rowspan="2" class="sistemes">Sistemes</td>
   </tr>
   <tr>
     <td>13:05-14:00</td>
-    <td>Web</td>
+    <td class="web">Web</td>
   </tr>
 </table>
 
