--- a/horari.html
+++ b/horari.html
@@ -61,8 +61,8 @@
 <br><br>
 <nav>
     <ul>
-        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1">Inici</a></li><br>
-        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/simple.html">Simple</a></li><br>
-        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/registre.html">Registre</a></li><br>
+        <li class="menu"><a href="index.html">Inici</a></li><br>
+        <li class="menu"><a href="simple.html">Simple</a></li><br>
+        <li class="menu"><a href="registre.html">Registre</a></li><br>
     </ul>
 </nav>
