--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </body>
 <nav>
     <ul>
-        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/simple.html">Simple</a></li><br>
-        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/horari.html">Horari</a></li><br>
-        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/registre.html">Registre</a></li>
+        <li class="menu"><a href="simple.html">Simple</a></li><br>
+        <li class="menu"><a href="horari.html">Horari</a></li><br>
+        <li class="menu"><a href="registre.html">Registre</a></li>
     </ul>
 </nav>
 </html>
