--- a/registre.html
+++ b/registre.html
@@ -36,8 +36,8 @@
 <br><br>
 <nav>
     <ul>
-        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1">Inici</a></li><br>
-        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/simple.html">Simple</a></li><br>
-        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/horari.html">Horari</a></li><br>
+        <li class="menu"><a href="index.html">Inici</a></li><br>
+        <li class="menu"><a href="simple.html">Simple</a></li><br>
+        <li class="menu"><a href="horari.html">Horari</a></li><br>
     </ul>
 </nav>
