--- a/simple.html
+++ b/simple.html
@@ -22,9 +22,9 @@
 <br><br>
 <nav>
     <ul>
-        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1">Inici</a></li><br>
-        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/horari.html">Horari</a></li><br>
-        <li class="menu"><a href="https://pvergerc-esliceu.github.io/practica1/registre.html">Registre</a></li><br>
+        <li class="menu"><a href="index.html">Inici</a></li><br>
+        <li class="menu"><a href="horari.html">Horari</a></li><br>
+        <li class="menu"><a href="registre.html">Registre</a></li><br>
     </ul>
 </nav>
 </html>
