--- a/registre.html
+++ b/registre.html
@@ -39,5 +39,6 @@
         <li class="menu"><a href="index.html">Inici</a></li><br>
         <li class="menu"><a href="simple.html">Simple</a></li><br>
         <li class="menu"><a href="horari.html">Horari</a></li><br>
+        <li class="menu"><a href="registre.html">Registre</a></li>
     </ul>
 </nav>
