--- a/horari.html
+++ b/horari.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="horari.css">
-<link rel="stylesheet" href="nav.css">
+<link rel="stylesheet" href="css/horari.css">
+<link rel="stylesheet" href="css/nav.css">
 <table>
   <tr>
     <td rowspan="2">HORARI</td>
