--- a/registre.html
+++ b/registre.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="nav.css">
+<link rel="stylesheet" href="css/nav.css">
 <h1>Exercici, formulari de registre</h1>
 
 <form action="https://pvergerc-esliceu.github.io/practica1/registre.html" method="get">
