--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="nav.css">
+<link rel="stylesheet" href="css/nav.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 <body>
     <h1>Rusty Steele</h1>
     <p>Hi, I'm a dog. Woof!</p>
-    <img src="rustysteele.jpeg" alt="rustysteele" width="330" height="370">
+    <img src="img/rustysteele.jpeg" alt="rustysteele" width="330" height="370">
     <h4>Some of my favorite places:</h4>
     <ul>
         <li>The beach</li>
